--- a/Sl.JsonExtensions/Sl.JsonExtensions.csproj
+++ b/Sl.JsonExtensions/Sl.JsonExtensions.csproj
@@ -2,8 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
+    <Authors>emre-gon</Authors>
+    <Description>Handy Json Extensions</Description>
+    <Copyright>2022</Copyright>
+    <PackageProjectUrl>https://github.com/emre-gon/Sl.JsonExtensions</PackageProjectUrl>
+    <PackageTags>json, extensions</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
